fix: show settings button on mobile when navbar is visible
- Add settings button to chapter navigation section for mobile view
- Use CSS to show/hide button appropriately on mobile vs desktop
- Lock navbar visibility state when drawer is open to prevent scroll-based changes
- Update drawer SCSS for proper height calculations

--- a/src/components/Navbar/Drawer/Drawer.module.scss
+++ b/src/components/Navbar/Drawer/Drawer.module.scss
@@ -1,13 +1,13 @@
-@use "src/styles/breakpoints";
-@use "src/styles/constants";
+@use 'src/styles/breakpoints';
+@use 'src/styles/constants';
 
 .container {
   display: flex;
   flex-direction: column;
   background: var(--color-background-elevated);
   position: fixed;
-  height: 100vh;
-  width: 100%;
+  block-size: 100vh;
+  inline-size: 100%;
   inset-block: 0;
   z-index: var(--z-index-header);
   transition: var(--transition-regular);
@@ -16,7 +16,7 @@
   overflow-x: hidden;
   overscroll-behavior-y: contain !important;
   @include breakpoints.tablet {
-    width: constants.$side-menu-desktop-width;
+    inline-size: constants.$side-menu-desktop-width;
   }
   &.left {
     inset-inline-start: -100%;
@@ -49,16 +49,16 @@
 .searchContainer {
   display: flex;
   flex-direction: column;
-  min-height: calc(100% - calc(var(--navbar-container-height) + calc(4 * var(--spacing-mega))));
+  min-block-size: calc(100% - calc(var(--navbar-container-height) + calc(4 * var(--spacing-mega))));
   @include breakpoints.tablet {
-    min-height: calc(100% - calc(var(--navbar-container-height) + var(--spacing-small)));
+    min-block-size: calc(100% - calc(var(--navbar-container-height) + var(--spacing-small)));
   }
   justify-content: space-between;
 }
 
 .bodyContainer {
   flex: 1;
-  margin-block-start: var(--navbar-container-height);
+  margin-block-start: var(--navbar-height);
   padding-block-start: var(--spacing-small);
   padding-inline-start: var(--spacing-small);
   padding-inline-end: var(--spacing-small);
@@ -77,15 +77,15 @@
 
 .header {
   font-size: var(--font-size-large);
-  width: 100%;
+  inline-size: 100%;
   position: fixed;
-  height: var(--navbar-container-height);
+  block-size: var(--navbar-height);
   border-block-end: 1px var(--color-borders-hairline) solid;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   @include breakpoints.tablet {
-    width: constants.$side-menu-desktop-width;
+    inline-size: constants.$side-menu-desktop-width;
   }
   z-index: var(--z-index-header);
 }
@@ -94,7 +94,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 100%;
+  inline-size: 100%;
   background-color: var(--color-background-elevated);
 }
 
@@ -117,5 +117,5 @@
 }
 
 .navbarInvisible {
-  transform: translate3d(0, 0 + var(--navbar-container-height), 0);
+  padding-block-start: var(--navbar-container-height);
 }
